--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,4 +51,4 @@ jobs:
         HOST: 188.120.242.182
         USER: root
         PRIVATE_SSH_KEY: ${{ secrets.SSH }}
-        COMMAND: "systecmtl restart backend"
+        COMMAND: "systecmctl restart backend"
